[gd_scene load_steps=22 format=2]

[ext_resource path="res://source/login and menus/ReadyScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://source/login and menus/FindMatch.gd" type="Script" id=2]
[ext_resource path="res://source/GameManager.gd" type="Script" id=3]
[ext_resource path="res://source/login and menus/Login.gd" type="Script" id=4]
[ext_resource path="res://source/Main.gd" type="Script" id=5]
[ext_resource path="res://source/login and menus/start.gd" type="Script" id=6]
[ext_resource path="res://fonts/cmu-typewriter/Typewriter.tres" type="DynamicFont" id=7]
[ext_resource path="res://source/nutt.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/ohter things/tileset.tres" type="TileSet" id=9]
[ext_resource path="res://assets/sounds/effects/ui/click.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/sounds/effects/ui/back.wav" type="AudioStream" id=11]
[ext_resource path="res://source/login and menus/MatchFound.gd" type="Script" id=12]
[ext_resource path="res://assets/sounds/music/juggernaut.ogg" type="AudioStream" id=13]
[ext_resource path="res://assets/ohter things/buttonfonttheme.tres" type="Theme" id=14]
[ext_resource path="res://assets/sounds/effects/ui/connected.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/sounds/music/p5jazz.ogg" type="AudioStream" id=16]
[ext_resource path="res://source/login and menus/exit_menu.gd" type="Script" id=17]
[ext_resource path="res://assets/sounds/music/blooddrain.ogg" type="AudioStream" id=18]
[ext_resource path="res://source/PlayersSpawnUnder.gd" type="Script" id=19]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 7 )

[sub_resource type="Animation" id=2]
resource_name = "loading"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ "Finding Match", "Finding Match.", "Finding Match..", "Finding Match..." ]
}

[node name="Main" type="Node2D" groups=["GameWorld"]]
script = ExtResource( 5 )

[node name="environment" type="Node2D" parent="."]
position = Vector2( 0, 1536 )

[node name="map size2" type="ReferenceRect" parent="environment"]
margin_left = 1664.0
margin_top = -1472.0
margin_right = 5760.0
margin_bottom = 320.0

[node name="collisions" type="TileMap" parent="environment"]
position = Vector2( 1216, 384 )
tile_set = ExtResource( 9 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -3866611, 1, 0, -3866610, 1, 0, -3866609, 1, 0, -3866608, 1, 0, -3866607, 1, 0, -3866606, 1, 0, -3866605, 1, 0, -3866604, 1, 0, -3866603, 1, 0, -3866602, 1, 0, -3866601, 1, 0, -3866600, 1, 0, -3866599, 1, 0, -3866598, 1, 0, -3866597, 1, 0, -3866596, 1, 0, -3866595, 1, 0, -3866594, 1, 0, -3866593, 1, 0, -3866592, 1, 0, -3866591, 1, 0, -3866590, 1, 0, -3866589, 1, 0, -3866588, 1, 0, -3866587, 1, 0, -3866586, 1, 0, -3866585, 1, 0, -3866584, 1, 0, -3866583, 1, 0, -3866582, 1, 0, -3866581, 1, 0, -3866580, 1, 0, -3866579, 1, 0, -3866578, 1, 0, -3866577, 1, 0, -3866576, 1, 0, -3866575, 1, 0, -3866574, 1, 0, -3866573, 1, 0, -3866572, 1, 0, -3866571, 1, 0, -3866570, 1, 0, -3866569, 1, 0, -3866568, 1, 0, -3866567, 1, 0, -3866566, 1, 0, -3866565, 1, 0, -3866564, 1, 0, -3866563, 1, 0, -3866562, 1, 0, -3866561, 1, 0, -3866560, 1, 0, -3866559, 1, 0, -3866558, 1, 0, -3866557, 1, 0, -3866556, 1, 0, -3866555, 1, 0, -3866554, 1, 0, -3866553, 1, 0, -3866552, 1, 0, -3866551, 1, 0, -3866550, 1, 0, -3866549, 1, 0, -3866548, 1, 0, -3866547, 1, 0, -3866546, 1, 0, -3866545, 1, 0, -3866544, 1, 0, -3866543, 1, 0, -3866542, 1, 0, -3866541, 1, 0, -3866540, 1, 0, -3866539, 1, 0, -3866538, 1, 0, -3866537, 1, 0, -3866536, 1, 0, -3866535, 1, 0, -3866534, 1, 0, -3866533, 1, 0, -3866532, 1, 0, -3866531, 1, 0, -3866530, 1, 0, -3866529, 1, 0, -3866528, 1, 0, -3866527, 1, 0, -3866526, 1, 0, -3866525, 1, 0, -3866524, 1, 0, -3866523, 1, 0, -3866522, 1, 0, -3866521, 1, 0, -3866520, 1, 0, -3866519, 1, 0, -3866518, 1, 0, -3866517, 1, 0, -3866516, 1, 0, -3866515, 1, 0, -3866514, 1, 0, -3866513, 1, 0, -3866512, 1, 0, -3866511, 1, 0, -3866510, 1, 0, -3866509, 1, 0, -3866508, 1, 0, -3866507, 1, 0, -3866506, 1, 0, -3866505, 1, 0, -3866504, 1, 0, -3866503, 1, 0, -3866502, 1, 0, -3866501, 1, 0, -3866500, 1, 0, -3866499, 1, 0, -3866498, 1, 0, -3866497, 1, 0, -3866496, 1, 0, -3866495, 1, 0, -3866494, 1, 0, -3866493, 1, 0, -3866492, 1, 0, -3866491, 1, 0, -3866490, 1, 0, -3866489, 1, 0, -3866488, 1, 0, -3866487, 1, 0, -3866486, 1, 0, -3866485, 1, 0, -3866484, 1, 0, -3866483, 1, 0, -3866482, 1, 0, -3801075, 1, 0, -3800946, 1, 0, -3735539, 1, 0, -3735410, 1, 0, -3670003, 1, 0, -3669874, 1, 0, -3604467, 1, 0, -3604338, 1, 0, -3538931, 1, 0, -3538802, 1, 0, -3473395, 1, 0, -3473266, 1, 0, -3407859, 1, 0, -3407730, 1, 0, -3342323, 1, 0, -3342194, 1, 0, -3276787, 1, 0, -3276658, 1, 0, -3211251, 1, 0, -3211122, 1, 0, -3145715, 1, 0, -3145586, 1, 0, -3080179, 1, 0, -3080050, 1, 0, -3014643, 1, 0, -3014514, 1, 0, -2949107, 1, 0, -2948978, 1, 0, -2883571, 1, 0, -2883442, 1, 0, -2818035, 1, 0, -2817906, 1, 0, -2752499, 1, 0, -2752370, 1, 0, -2686963, 1, 0, -2686834, 1, 0, -2621427, 1, 0, -2621298, 1, 0, -2555891, 1, 0, -2555762, 1, 0, -2490355, 1, 0, -2490226, 1, 0, -2424819, 1, 0, -2424690, 1, 0, -2359283, 1, 0, -2359154, 1, 0, -2293747, 1, 0, -2293618, 1, 0, -2228211, 1, 0, -2228082, 1, 0, -2162675, 1, 0, -2162546, 1, 0, -2097139, 1, 0, -2097010, 1, 0, -2031603, 1, 0, -2031474, 1, 0, -1966067, 1, 0, -1965938, 1, 0, -1900531, 1, 0, -1900402, 1, 0, -1834995, 1, 0, -1834866, 1, 0, -1769459, 1, 0, -1769330, 1, 0, -1703923, 1, 0, -1703794, 1, 0, -1638387, 1, 0, -1638258, 1, 0, -1572851, 1, 0, -1572722, 1, 0, -1507315, 1, 0, -1507186, 1, 0, -1441779, 1, 0, -1441650, 1, 0, -1376243, 1, 0, -1376114, 1, 0, -1310707, 1, 0, -1310578, 1, 0, -1245171, 1, 0, -1245042, 1, 0, -1179635, 1, 0, -1179506, 1, 0, -1114099, 1, 0, -1113970, 1, 0, -1048563, 1, 0, -1048434, 1, 0, -983027, 1, 0, -982898, 1, 0, -917491, 1, 0, -917362, 1, 0, -851955, 1, 0, -851826, 1, 0, -786419, 1, 0, -786290, 1, 0, -720883, 1, 0, -720754, 1, 0, -655347, 1, 0, -655218, 1, 0, -589811, 1, 0, -589682, 1, 0, -524275, 1, 0, -524146, 1, 0, -458739, 1, 0, -458610, 1, 0, -393203, 1, 0, -393074, 1, 0, -327667, 1, 0, -327538, 1, 0, -262131, 1, 0, -262002, 1, 0, -196595, 1, 0, -196466, 1, 0, -131059, 1, 0, -131058, 1, 0, -131057, 1, 0, -131056, 1, 0, -131055, 1, 0, -131054, 1, 0, -131053, 1, 0, -131052, 1, 0, -131051, 1, 0, -131050, 1, 0, -131049, 1, 0, -131048, 1, 0, -131047, 1, 0, -131046, 1, 0, -131045, 1, 0, -131044, 1, 0, -131043, 1, 0, -131042, 1, 0, -131041, 1, 0, -131040, 1, 0, -131039, 1, 0, -131038, 1, 0, -131037, 1, 0, -131036, 1, 0, -131035, 1, 0, -131034, 1, 0, -131033, 1, 0, -131032, 1, 0, -131031, 1, 0, -131030, 1, 0, -131029, 1, 0, -131028, 1, 0, -131027, 1, 0, -131026, 1, 0, -131025, 1, 0, -131024, 1, 0, -131023, 1, 0, -131022, 1, 0, -131021, 1, 0, -131020, 1, 0, -131019, 1, 0, -131018, 1, 0, -131017, 1, 0, -131016, 1, 0, -131015, 1, 0, -131014, 1, 0, -131013, 1, 0, -131012, 1, 0, -131011, 1, 0, -131010, 1, 0, -131009, 1, 0, -131008, 1, 0, -131007, 1, 0, -131006, 1, 0, -131005, 1, 0, -131004, 1, 0, -131003, 1, 0, -131002, 1, 0, -131001, 1, 0, -131000, 1, 0, -130999, 1, 0, -130998, 1, 0, -130997, 1, 0, -130996, 1, 0, -130995, 1, 0, -130994, 1, 0, -130993, 1, 0, -130992, 1, 0, -130991, 1, 0, -130990, 1, 0, -130989, 1, 0, -130988, 1, 0, -130987, 1, 0, -130986, 1, 0, -130985, 1, 0, -130984, 1, 0, -130983, 1, 0, -130982, 1, 0, -130981, 1, 0, -130980, 1, 0, -130979, 1, 0, -130978, 1, 0, -130977, 1, 0, -130976, 1, 0, -130975, 1, 0, -130974, 1, 0, -130973, 1, 0, -130972, 1, 0, -130971, 1, 0, -130970, 1, 0, -130969, 1, 0, -130968, 1, 0, -130967, 1, 0, -130966, 1, 0, -130965, 1, 0, -130964, 1, 0, -130963, 1, 0, -130962, 1, 0, -130961, 1, 0, -130960, 1, 0, -130959, 1, 0, -130958, 1, 0, -130957, 1, 0, -130956, 1, 0, -130955, 1, 0, -130954, 1, 0, -130953, 1, 0, -130952, 1, 0, -130951, 1, 0, -130950, 1, 0, -130949, 1, 0, -130948, 1, 0, -130947, 1, 0, -130946, 1, 0, -130945, 1, 0, -130944, 1, 0, -130943, 1, 0, -130942, 1, 0, -130941, 1, 0, -130940, 1, 0, -130939, 1, 0, -130938, 1, 0, -130937, 1, 0, -130936, 1, 0, -130935, 1, 0, -130934, 1, 0, -130933, 1, 0, -130932, 1, 0, -130931, 1, 0, -130930, 1, 0 )

[node name="ColorRect" type="ColorRect" parent="environment"]
margin_left = 2312.0
margin_top = -640.0
margin_right = 5120.0
margin_bottom = -578.0
color = Color( 0.0392157, 0.0823529, 0.372549, 1 )

[node name="nutt" parent="environment" instance=ExtResource( 8 )]
position = Vector2( 3712, -608 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 192.0
margin_top = 64.0
margin_right = 832.0
margin_bottom = 512.0
theme = ExtResource( 14 )

[node name="ReadyScreen" parent="Control" instance=ExtResource( 1 )]
visible = false
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
mouse_filter = 2

[node name="MatchFound" type="Control" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
mouse_filter = 2
script = ExtResource( 12 )

[node name="Panel2" type="Panel" parent="Control/MatchFound"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/MatchFound"]
margin_left = 316.0
margin_top = 277.0
margin_right = 460.0
margin_bottom = 309.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0.898039, 0.870588, 0.407843, 1 )
text = "Match Found!"
align = 1

[node name="FindMatch" type="Control" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="Panel2" type="Panel" parent="Control/FindMatch"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/FindMatch"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.0356
margin_top = -13.6071
margin_right = 47.9644
margin_bottom = 0.392883
text = "Finding Match"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/FindMatch/Label"]
anims/loading = SubResource( 2 )

[node name="FindMatch" type="Button" parent="Control/FindMatch"]
margin_left = 316.0
margin_top = 259.0
margin_right = 498.0
margin_bottom = 317.0
text = "Find Match"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2v2" type="CheckBox" parent="Control/FindMatch"]
margin_left = 419.0
margin_top = 175.0
margin_right = 450.0
margin_bottom = 212.0

[node name="2v2label" type="Label" parent="Control/FindMatch"]
margin_left = 256.0
margin_top = 183.0
margin_right = 696.0
margin_bottom = 267.0
custom_fonts/font = ExtResource( 7 )
text = "Search for 2v2? 
Searches for 1v1 by default."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Login" type="Control" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
mouse_filter = 2
theme = ExtResource( 14 )
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="Control/Login"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameLabel" type="RichTextLabel" parent="Control/Login"]
margin_left = 16.0
margin_top = 48.0
margin_right = 165.0
margin_bottom = 150.0
text = "Username:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmailLabel" type="RichTextLabel" parent="Control/Login"]
margin_left = 16.0
margin_top = 96.0
margin_right = 211.0
margin_bottom = 145.0
text = "Key:"

[node name="PasswordLabel" type="RichTextLabel" parent="Control/Login"]
visible = false
margin_left = 16.0
margin_top = 144.0
margin_right = 211.0
margin_bottom = 245.0
text = "Password:
(Must be longer
than 8 characters)
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameText" type="LineEdit" parent="Control/Login"]
margin_left = 168.0
margin_top = 48.0
margin_right = 334.0
margin_bottom = 78.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmailText" type="LineEdit" parent="Control/Login"]
margin_left = 168.0
margin_top = 96.0
margin_right = 334.0
margin_bottom = 126.0

[node name="PasswordText" type="LineEdit" parent="Control/Login"]
visible = false
margin_left = 168.0
margin_top = 144.0
margin_right = 334.0
margin_bottom = 174.0
text = "11111111"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Register" type="Button" parent="Control/Login"]
margin_left = 220.0
margin_top = 256.0
margin_right = 420.0
margin_bottom = 306.0
text = "Register"

[node name="Login" type="Button" parent="Control/Login"]
margin_left = 220.0
margin_top = 256.0
margin_right = 420.0
margin_bottom = 306.0
text = "Login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Control/Login"]
margin_left = 277.5
margin_top = 344.0
margin_right = 362.5
margin_bottom = 376.0
text = "Back"

[node name="ErrorText" type="Label" parent="Control/Login"]
visible = false
margin_left = 216.0
margin_top = 216.0
margin_right = 435.0
margin_bottom = 236.0
text = "error here"

[node name="start" type="Control" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
mouse_filter = 2
script = ExtResource( 6 )

[node name="Panel" type="Panel" parent="Control/start"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Register" type="Button" parent="Control/start"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -91.0
margin_right = 100.0
margin_bottom = -41.0
theme = ExtResource( 14 )
text = "Register"

[node name="-or-" type="Label" parent="Control/start"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -13.0
margin_right = 20.0
margin_bottom = 13.0
text = "-OR-"

[node name="Login" type="Button" parent="Control/start"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 43.0
margin_right = 100.0
margin_bottom = 93.0
theme = ExtResource( 14 )
text = "Login"

[node name="exit_menu" type="Control" parent="Control"]
visible = false
margin_left = -185.0
margin_top = -55.0
margin_right = -185.0
margin_bottom = -55.0
script = ExtResource( 17 )

[node name="grey_out" type="ColorRect" parent="Control/exit_menu"]
margin_left = -266.0
margin_top = -153.0
margin_right = 219.0
margin_bottom = 488.0
rect_scale = Vector2( 3.19236, 1.35492 )
color = Color( 0.388235, 0.388235, 0.388235, 0.827451 )

[node name="mExit" type="Label" parent="Control/exit_menu"]
margin_left = 320.0
margin_right = 700.0
margin_bottom = 26.0
text = "Would you like to exit to the desktop?"

[node name="Yes" type="Button" parent="Control/exit_menu"]
margin_left = 267.0
margin_top = 95.0
margin_right = 467.0
margin_bottom = 145.0
theme = ExtResource( 14 )
text = "Yes"

[node name="No" type="Button" parent="Control/exit_menu"]
margin_left = 552.0
margin_top = 95.0
margin_right = 752.0
margin_bottom = 145.0
theme = ExtResource( 14 )
text = "No"

[node name="Players" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="PlayerSpawnPoints" type="Node2D" parent="Players"]

[node name="Player1" type="Position2D" parent="Players/PlayerSpawnPoints"]
position = Vector2( 1920, 384 )

[node name="Player2" type="Position2D" parent="Players/PlayerSpawnPoints"]
position = Vector2( 5504, 384 )

[node name="Player3" type="Position2D" parent="Players/PlayerSpawnPoints"]
position = Vector2( 1920, 1536 )

[node name="Player4" type="Position2D" parent="Players/PlayerSpawnPoints"]
position = Vector2( 5504, 1536 )

[node name="Camera2D" type="Camera2D" parent="Players"]
position = Vector2( 511.979, 287.704 )
current = true

[node name="ui" type="ReferenceRect" parent="Players/Camera2D"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -768.0
margin_top = -432.0
margin_right = 768.0
margin_bottom = 432.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Username" type="Label" parent="Players/Camera2D/ui"]
margin_left = 24.021
margin_top = 24.296
margin_right = 840.021
margin_bottom = 51.296
custom_fonts/font = ExtResource( 7 )

[node name="currentsong" type="Label" parent="Players/Camera2D/ui"]
margin_left = 696.021
margin_top = 48.296
margin_right = 1512.02
margin_bottom = 75.296
theme = ExtResource( 14 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="respawncd" type="Label" parent="Players/Camera2D/ui"]
visible = false
margin_left = 8.021
margin_top = 824.296
margin_right = 192.021
margin_bottom = 850.296
theme = ExtResource( 14 )
text = "Respawn in: "

[node name="selected" type="Label" parent="Players/Camera2D/ui"]
margin_left = 1392.02
margin_top = 800.296
margin_right = 1512.02
margin_bottom = 840.296
theme = ExtResource( 14 )

[node name="PlayersSpawnUnder" type="Node2D" parent="Players"]
script = ExtResource( 19 )

[node name="sound" type="Node2D" parent="."]

[node name="login1" type="AudioStreamPlayer" parent="sound"]
stream = ExtResource( 18 )

[node name="login2" type="AudioStreamPlayer" parent="sound"]
stream = ExtResource( 16 )

[node name="login3" type="AudioStreamPlayer" parent="sound"]
stream = ExtResource( 13 )

[node name="uisound" type="Node2D" parent="sound"]

[node name="click" type="AudioStreamPlayer" parent="sound/uisound"]
stream = ExtResource( 10 )

[node name="back" type="AudioStreamPlayer" parent="sound/uisound"]
stream = ExtResource( 11 )

[node name="connected" type="AudioStreamPlayer" parent="sound/uisound"]
stream = ExtResource( 15 )

[connection signal="button_down" from="Control/FindMatch/FindMatch" to="Control/FindMatch" method="_on_Button_button_down"]
[connection signal="toggled" from="Control/FindMatch/2v2" to="Control/FindMatch" method="_on_2v2_toggled"]
[connection signal="button_down" from="Control/Login/Register" to="Control/Login" method="_on_Register_button_down"]
[connection signal="button_down" from="Control/Login/Login" to="Control/Login" method="_on_Login_button_down"]
[connection signal="button_down" from="Control/Login/Back" to="Control/Login" method="_on_Back_button_down"]
[connection signal="button_down" from="Control/start/Register" to="Control/start" method="_on_Register_button_down"]
[connection signal="button_down" from="Control/start/Login" to="Control/start" method="_on_Login_button_down"]
[connection signal="button_up" from="Control/exit_menu/Yes" to="Control/exit_menu" method="_on_Yes_button_up"]
[connection signal="button_up" from="Control/exit_menu/No" to="Control/exit_menu" method="_on_No_button_up"]

[editable path="Control/ReadyScreen"]
